# glslPocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
commands/: CMakeLists.txt  command.hpp  commandProcessor.cpp  commandProcessor.hpp  createConnection.cpp  createConnection.hpp  createNode.cpp  createNode.hpp  createStructNode.cpp  createStructNode.hpp  nodeConnections.cpp  nodeConnections.hpp  renameNode.cpp  renameNode.hpp  setProperty.cpp  setProperty.hpp
glsl/: CMakeLists.txt  builtin.cpp  builtin.hpp  compiler.cpp  compiler.hpp  flags.hpp  float.cpp  float.hpp  module.cpp  module.hpp  nodeFactory.cpp  nodeFactory.hpp  nodeId.hpp  operator.cpp  operator.hpp  swizzle.cpp  swizzle.hpp  vec.cpp  vec.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
graph/: CMakeLists.txt  attribute.hpp  callback.hpp  connection.cpp  connection.hpp  enterNode.cpp  enterNode.hpp  exitNode.cpp  exitNode.hpp  function.hpp  graph.cpp  graph.hpp  hooks.hpp  jsonReader.cpp  jsonReader.hpp  jsonWriter.cpp  jsonWriter.hpp  node.cpp  node.hpp  nodeFactory.hpp  nodeId.hpp  nodeRegistry.cpp  nodeRegistry.hpp  operator.hpp  program.cpp  program.hpp  property.cpp  property.hpp  schema.cpp  schema.hpp  schemaRegistry.cpp  schemaRegistry.hpp  struct.hpp  type.hpp  typeRegistry.cpp  typeRegistry.hpp  userFunction.cpp  userFunction.hpp  value.hpp
graphdev/: CMakeLists.txt  connection.hpp  enterNode.cpp  enterNode.hpp  graph.hpp  node.hpp  nodeId.hpp  nodeRegistry.cpp  nodeRegistry.hpp  program.cpp  program.hpp  typeRegistry.hpp  userFunction.cpp  userFunction.hpp
shadertoy/: CMakeLists.txt  compiler.cpp  compiler.hpp  module.cpp  module.hpp  nodeFactory.cpp  nodeFactory.hpp  shader.cpp  shader.hpp
